<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_bills"
        android:textSize="20sp"
        android:layout_margin="3dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_recent_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">
        <TextView
            android:id="@+id/alert_recent_bill_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_recent_bill_not_found"/>
        <TextView
            android:id="@+id/more_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_more"/>
    </RelativeLayout>

</LinearLayout>