<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            app:met_floatingLabelText="@string/bill_name"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            android:id="@+id/txt_bill_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/separator_row_bill"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/tax_input"
                app:met_floatingLabelAlwaysShown="true"
                android:id="@+id/txt_bill_tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

        <View
            android:id="@+id/separator_row_bill"
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/separator_row_bill">

            <com.rengwuxian.materialedittext.MaterialEditText
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/service_fee_input"
                app:met_floatingLabelAlwaysShown="true"
                android:id="@+id/txt_bill_service_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

    </RelativeLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/due_date"
        app:met_floatingLabelAlwaysShown="true"
        android:id="@+id/txt_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

</LinearLayout>